tests/neg/i5311.check
-- [E007] Type Mismatch Error: tests/neg/i5311.scala:11:27 -------------------------------------------------------------
11 |    baz((x : s.T[Int]) => x) // error
   |                           ^
   |                           Found:    s.T[Int] => s.T[Int]
   |                           Required: m.Foo
